--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -1,7 +1,6 @@
 <div class="page-start-point changeWidth mt-5 pt-4">
   <div class="p-l-20 p-r-20 p-b-20">
-    <card-layout *ngIf="projectData" (onEdit)="editProject()" (onDelete)="deleteProject()"
-      [projectDetails]="projectData" [disableEditDelete]="true" pageType="2"></card-layout>
+    <card-layout *ngIf="projectData" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="projectData" [disableEditDelete]="true" pageType="2"></card-layout>
     <div class="row">
       <div class="col-xs-12 col-md-3">
         <mat-form-field class="bom-form-field border-input w-100">
@@ -14,16 +13,15 @@
 
       <div class="col-xs-12 col-md-9 p-t-10" [ngClass]="!isMobile ? 'text-right' : ''">
         <mat-form-field [ngClass]="isMobile ? 'width-50' : 'width-15'" class="t-0 label-adjust bom-select-menus">
-          <mat-label><img src="../../../assets/images/create-icon.svg" alt="" />
+          <mat-label
+            ><img src="../../../assets/images/create-icon.svg" alt="" />
             <span class="main-color p-l-5">Create</span>
           </mat-label>
           <mat-select class="hide-select-arrow">
-            <mat-option class="height-2-em" (click)="createRfq()"
-              [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded not-allowed'">
+            <mat-option class="height-2-em" (click)="createRfq()" [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded not-allowed'">
               Create RFQ
             </mat-option>
-            <mat-option class="height-2-em" (click)="raiseIndent()"
-              [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded not-allowed'">
+            <mat-option class="height-2-em" (click)="raiseIndent()" [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded not-allowed'">
               Raise Indent
             </mat-option>
             <mat-option (click)="openGrnDialog()" class="height-2-em main-color">
@@ -35,7 +33,8 @@
           </mat-select>
         </mat-form-field>
         <mat-form-field [ngClass]="isMobile ? 'width-50' : 'width-16'" class="t-0 label-adjust bom-select-menus">
-          <mat-label><img src="../../../assets/images/create-icon.svg" alt="" />
+          <mat-label
+            ><img src="../../../assets/images/create-icon.svg" alt="" />
             <span class="main-color p-l-5">+Add/Edit</span>
           </mat-label>
           <mat-select class="hide-select-arrow shift-upward">
@@ -59,18 +58,20 @@
       </div>
     </div>
 
-    <div class="row bom-details-table-div-part example-container mat-elevation-z8" [ngClass]="isMobile ? 'ml-0' : '' ">
+    <div class="row bom-details-table-div-part example-container mat-elevation-z8" [ngClass]="isMobile ? 'ml-0' : ''">
       <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="col-sm-12 bom-material-table">
         <ng-container matColumnDef="materialName">
           <th *matHeaderCellDef class="first-column-row-header">
             Material Name
           </th>
-          <td class="text-left" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
-            <mat-checkbox #ch (change)="getElemenetChecked(ch, element)" [checked]="element.checked"
-              [disabled]="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false">
-              <div class="limited-character bom" matTooltip=" {{ element.materialName }}">{{ element.materialName }}
-                <br /></div>
+          <td class="text-left" mat-cell *matCellDef="let element" [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+            <mat-checkbox
+              #ch
+              (change)="getElemenetChecked(ch, element)"
+              [checked]="element.checked"
+              [disabled]="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false"
+            >
+              <div class="limited-character bom" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
               <div class="limited-character bom" matTooltip=" {{ element.materialGroup }}">
                 <span class="category-name">
                   {{ element.materialGroup }}
@@ -84,8 +85,12 @@
           <th *matHeaderCellDef class="text-align-center justify-center">
             Unit
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+          <td
+            class="text-align-center"
+            mat-cell
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
             {{ element.materialUnit }}
           </td>
         </ng-container>
@@ -93,8 +98,12 @@
           <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
             Estimated Quantity
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+          <td
+            class="text-align-center"
+            mat-cell
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
             {{ element.estimatedQty }}
           </td>
         </ng-container>
@@ -102,8 +111,12 @@
           <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
             Estimated Rate
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+          <td
+            class="text-align-center"
+            mat-cell
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
             {{ element.estimatedRate }}
           </td>
         </ng-container>
@@ -111,8 +124,12 @@
           <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
             Indented Quantity
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+          <td
+            class="text-align-center"
+            mat-cell
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
             {{ element.requestedQuantity }}
           </td>
         </ng-container>
@@ -120,20 +137,27 @@
           <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
             Issued To Project
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
-            <ng-container *ngIf="element.issueToProject; else showZEroDataIP"> {{ element.issueToProject }}
-            </ng-container>
+          <td
+            class="text-align-center"
+            mat-cell
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
+            <ng-container *ngIf="element.issueToProject; else showZEroDataIP"> {{ element.issueToProject }} </ng-container>
             <ng-template #showZEroDataIP> 0 </ng-template>
           </td>
         </ng-container>
         <ng-container matColumnDef="availableStock">
-          <th *matHeaderCellDef [hidden]="!permissionObj.rfqFlag"
-            class="text-align-center justify-center minwidth-110-px">
+          <th *matHeaderCellDef [hidden]="!permissionObj.rfqFlag" class="text-align-center justify-center minwidth-110-px">
             Available In Stock
           </th>
-          <td class="text-align-center" mat-cell [hidden]="!permissionObj.rfqFlag" *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+          <td
+            class="text-align-center"
+            mat-cell
+            [hidden]="!permissionObj.rfqFlag"
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
             <ng-container *ngIf="element.availableStock; else showZEroData"> {{ element.availableStock }}</ng-container>
             <ng-template #showZEroData> 0 </ng-template>
           </td>
@@ -143,58 +167,71 @@
           <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
             Attached Images
           </th>
-          <td class="text-align-center bom-attached-images-col" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+          <td
+            class="text-align-center bom-attached-images-col"
+            mat-cell
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
             <!-- View image modal link -->
-            <div *ngIf="element?.documentsList?.length" class="images-lists"
-              [ngClass]="element.documentsList.length === 1 ? 'single-image' : (element.documentsList.length === 2 ? 'double-images' : 'triple-images')"
-              (click)="viewAllImages(element.projectId, element.materialId)">
+            <div
+              *ngIf="element?.documentsList?.length"
+              class="images-lists"
+              [ngClass]="element.documentsList.length === 1 ? 'single-image' : element.documentsList.length === 2 ? 'double-images' : 'triple-images'"
+              (click)="viewAllImages(element.projectId, element.materialId)"
+            >
               <ng-container *ngFor="let img of element.documentsList; let i = index">
-                <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image"
-                  *ngIf="i < 3" />
+                <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image" *ngIf="i < 3" />
               </ng-container>
             </div>
 
             <ng-container *ngIf="!element?.documentsList">
-              <img src="assets/images/project-default-image.png" alt="default-material"
-                class="img-fluid default-image" />
+              <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
             </ng-container>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="customColumn">
           <th *matHeaderCellDef></th>
-          <td class="text-right p-b-20" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
-            
-            <span *ngIf="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false"
-              class="p-r-20 p-t-10 display-inline-block color-grey">Pending</span>
-            
+          <td
+            class="text-right p-b-20"
+            mat-cell
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
+            <span *ngIf="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false" class="p-r-20 p-t-10 display-inline-block color-grey">Pending</span>
+
             <!-- Upload Image Link -->
             <a class="p-r-10 cursor-pointer issue-to-indent-icon" matTooltip="Add/Edit Image" (click)="uploadImage(element)">
               <img class="width-20-px mt-1 mr-2" src="assets/images/upload-image-icon.svg" />
             </a>
-              
+
             <a class="width-15-px p-r-10 cursor-pointer issue-to-indent-icon" matTooltip="Issue to Indent">
               <img (click)="openIssueTOIndent(element)" [src]="indentButtonColor(element)" />
             </a>
-            
-            <a class="width-15-px p-l-5 cursor-pointer" matTooltip="Delete" *ngIf="
-                (element.requestedQuantity === 0 || element.requestedQuantity === null) &&
-                (element.availableStock === 0 || element.availableStock === null) &&
-                (element.issueToProject === 0 || element.issueToProject === null)
-              " (click)="
-                (element.materialCustomFlag === 1 ? element.isApproved !== 1 : false)
-                  ? null
-                  : deleteBom(element.materialId, element.projectId, element.requestedQuantity === 0 && element.availableStock === 0 && element.issueToProject === 0)
-              ">
-              <img [src]="
-                  (element.requestedQuantity === 0 || element.requestedQuantity === null) &&
+
+            <a
+              class="width-15-px p-l-5 cursor-pointer"
+              matTooltip="Delete"
+              (click)="
+                element.requestedQuantity == 0 &&
+                (element.availableStock == 0 || element.availableStock == null) &&
+                element.issueToProject == 0 &&
+                (element.materialCustomFlag ? (element.isApproved == 1 ? true : false) : true)
+                  ? deleteBom(element.materialId, element.projectId, element.requestedQuantity === 0 && element.availableStock === 0 && element.issueToProject === 0)
+                  : null
+              "
+            >
+              <img
+                [src]="
+                  element.requestedQuantity === 0 &&
                   (element.availableStock === 0 || element.availableStock === null) &&
-                  (element.issueToProject === 0 || element.issueToProject === null)
+                  element.issueToProject === 0 &&
+                  (element.materialCustomFlag ? (element.isApproved == 1 ? true : false) : true)
                     ? '../../../../assets/images/delete-button.png'
-                    : '../../../../assets/images/delete-button_disable.png'
-                " />
+                    : '../../../../assets/images/delete-button-disable.png'
+                "
+              />
             </a>
 
             <!-- <a
@@ -224,8 +261,7 @@
 
         <ng-container matColumnDef="expandedDetail">
           <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-            <div class="example-element-detail" *ngIf="element.materialSpecs"
-              [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+            <div class="example-element-detail" *ngIf="element.materialSpecs" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
               <div class="inner-table mat-elevation-z8 row" *ngIf="expandedElement">
                 <table class="col-sm-12" mat-table [dataSource]="element.materialSpecs">
                   <ng-container matColumnDef="materialName">
@@ -258,8 +294,7 @@
                     <th *matHeaderCellDef class="text-align-center">
                       Requested Material
                     </th>
-                    <td class="text-align-center" mat-cell *matCellDef="let element">{{ element.requestedQuantity }}
-                    </td>
+                    <td class="text-align-center" mat-cell *matCellDef="let element">{{ element.requestedQuantity }}</td>
                   </ng-container>
                   <ng-container matColumnDef="issueToProject">
                     <th *matHeaderCellDef class="text-align-center">
