--- a/src/app/features/reports/ctc-report/ctc-report.component.html
+++ b/src/app/features/reports/ctc-report/ctc-report.component.html
@@ -43,14 +43,14 @@
           </mat-form-field>
         </div>
 
-        <div class="col-md-2 pt-4">
+        <div class="col-md-2 pt-2">
           <!------ Show Amount Field ------>
           <div *ngIf="allProjectsData" class="show-amount-dropdown text-semi-bold main-color font-size-vary-grn cursor-pointer" #triggerBtn [matMenuTriggerFor]="amount">
             Display Amount
           </div>
         </div>
 
-        <div class="col-md-7 col-xs-6 add-project-btn display-flex justify-content-flex-end align-items-center pt-4">
+        <div class="col-md-7 col-xs-6 add-project-btn display-flex justify-content-flex-end align-items-center pt-2">
           <!------ Download Report ------>
           <div class="download-report pr-3" *ngIf="allProjectsData">
             <a class="font-size16 cursor-pointer" matTooltip="Download Report" (click)="downloadExcel()"> <img src="../../../../assets/images/download-po.png" /></a>
@@ -82,7 +82,7 @@
       </div>
 
       <!-- table For Showing Reports-->
-      <ng-container *ngIf="allProjectsData?.length; else noDataAvailable">
+      <ng-container *ngIf="allProjectsData?.projectDataList?.length; else noDataAvailable">
         <div class="reportTablePo">
           <p class="fontsize-14-px p-b-0 p-t-10 mb-1">*All the values are in base currency ({{ currency }})</p>
           <!-- <p class="fontsize-14-px pb-0">**All the values are inclusive of taxes.</p> -->
@@ -124,7 +124,7 @@
               </th>
             </tr>
 
-            <mat-accordion *ngFor="let project of allProjectsData">
+            <mat-accordion *ngFor="let project of allProjectsData.projectDataList">
               <!-- Project List Data -->
               <mat-expansion-panel>
                 <mat-expansion-panel-header class="background-projects">
@@ -175,6 +175,31 @@
                 </mat-expansion-panel>
               </mat-expansion-panel>
             </mat-accordion>
+
+            <!-- Total Amount Footer -->
+            <tr class="material-row backgound-total-amount">
+              <td class="mat-cell">Total Amount</td>
+              <td class="mat-cell"></td>
+              <td class="mat-cell text-right">
+                {{ allProjectsData.estimatedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+              </td>
+              <td class="mat-cell text-right">{{ allProjectsData.awardedAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}</td>
+              <td class="mat-cell text-right">
+                {{ allProjectsData.deliveredAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+              </td>
+              <td class="mat-cell text-right">
+                {{ allProjectsData.paidAmount / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+              </td>
+              <td class="mat-cell text-right">
+                {{ allProjectsData.projectedCost / this.conversionNumber | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US") }}
+              </td>
+              <td class="mat-cell text-right">
+                {{
+                  (allProjectsData.projectedCost - allProjectsData.deliveredAmount) / this.conversionNumber
+                    | indianNumber: (this.countryCode == "IN" ? "en-IN" : "en-US")
+                }}
+              </td>
+            </tr>
           </table>
         </div>
       </ng-container>
