--- a/src/app/features/global-store/project-wise/project-wise.component.html
+++ b/src/app/features/global-store/project-wise/project-wise.component.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-md-3 border-input" *ngIf="this.newProjectData.length && this.newProjectData.length > 0">
+<div class="col-xs-12 col-md-3 border-input" *ngIf="projectData && projectData.length > 0">
   <mat-form-field class="example-form-field border-input">
     <input matInput placeholder="Search Project" type="search" [(ngModel)]="searchProject" />
     <button mat-button matSuffix mat-icon-button>
@@ -7,75 +7,70 @@
   </mat-form-field>
 </div>
 
-<mat-accordion displayMode="flat" multi class="mat-table res-table" *ngIf="this.newProjectData.length && this.newProjectData.length > 0">
-  <div class="res-td">
-    <section matSort class="mat-elevation-z2 mat-header-row blue-background-color-color-white-section">
-      <span class="mat-header-cell maxwidth-20 material material-Name" mat-sort-header="name" [ngClass]="isMobile ? 'text-center p-rem-l-2 p-rem-r-2' : ''"
-        ><span>Material Name</span>
-      </span>
-      <span class="mat-header-cell maxwidth-20 material" mat-sort-header="estimatedQuantity" [ngClass]="isMobile ? 'text-center p-rem-l-2 p-rem-r-2' : ''">Estimated Quantity</span>
-      <span class="mat-header-cell maxwidth-20 material" mat-sort-header="indentedQuantity" [ngClass]="isMobile ? 'text-center p-rem-l-2 p-rem-r-2' : ''">Indented Quantity</span>
-      <span class="mat-header-cell maxwidth-20 material" mat-sort-header="requiredDate" [ngClass]="isMobile ? 'text-center p-rem-l-2 p-rem-r-2' : ''">Required Date</span>
-      <span class="mat-header-cell maxwidth-20 material" mat-sort-header="deliveredQuantity" [ngClass]="isMobile ? 'text-center p-rem-l-2 p-rem-r-2' : ''">Awarded Quantity</span>
-      <span class="mat-header-cell maxwidth-20 material" mat-sort-header="awardedQuantity" [ngClass]="isMobile ? 'text-center p-rem-l-2 p-rem-r-2' : ''">Delivered Quantity</span>
-      <span class="mat-header-cell maxwidth-20 material" mat-sort-header="availableQuantity" [ngClass]="isMobile ? 'text-center p-rem-l-2 p-rem-r-2' : ''">Available Stock</span>
-      <!--  5 5 -->
-    </section>
-    <mat-expansion-panel *ngFor="let project of newProjectData | SearchPipe: searchProject:['ProjectGlobal.projectName']" class="myPanel">
-      <mat-expansion-panel-header class="mat-row material-row">
-        <span class="mat-cell">{{ project.ProjectGlobal.projectName }}</span>
-      </mat-expansion-panel-header>
+<mat-accordion>
+  <div class="material-wise-section">
+    <table class="material-wise-tbl width-100">
+      <tr matSort class="mat-header-row">
+        <th class="mat-header-cell">Material Name</th>
+        <th class="mat-header-cell">Unit</th>
+        <th class="mat-header-cell text-center">Estimated <br />Quantity</th>
+        <th class="mat-header-cell text-center">Indented <br />Quantity</th>
+        <th class="mat-header-cell text-center">Required <br />Date</th>
+        <th class="mat-header-cell text-center">Delivered <br />Quantity</th>
+        <th class="mat-header-cell text-center">Awarded <br />Quantity</th>
+        <th class="mat-header-cell text-center">Available <br />Stock</th>
+      </tr>
 
-      <mat-expansion-panel *ngFor="let material of project.GlobalMaterials" class="myPanel">
-        <mat-expansion-panel-header class="mat-row material-project">
-          <span class="mat-cell maxwidth-14 text-center" matTooltip=" {{ material.GlobalMaterial.materialName }}">
-            <div class="limited-character globalStore">
-              {{ material.GlobalMaterial.materialName }}
-            </div>
-          </span>
+      <div *ngFor="let project of projectData | SearchPipe: searchProject:['projectName']">
+        <mat-expansion-panel>
+          <!-- Projects list -->
+          <mat-expansion-panel-header class="material-row-bg">
+            <tr class="mat-row materials-tbl width-100">
+              <td class="mat-cell" matTooltip="{{ project.projectName }}">{{ project.projectName }}</td>
+              <td class="mat-cell"></td>
+              <td class="mat-cell"></td>
+              <td class="mat-cell"></td>
+              <td class="mat-cell"></td>
+              <td class="mat-cell"></td>
+              <td class="mat-cell"></td>
+              <td class="mat-cell"></td>
+            </tr>
+          </mat-expansion-panel-header>
 
-          <span class="mat-cell maxwidth-14 text-center"
-            >{{ material.GlobalMaterial.estimatedQty }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-          >
-          <span class="mat-cell maxwidth-14 text-center"
-            >{{ material.GlobalMaterial.sum }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-          >
-          <span class="mat-cell maxwidth-14 text-center"> {{ material.GlobalMaterial.nearDueDate | date: "dd MMM yyy" }}</span>
-          <span class="mat-cell maxwidth-14 text-center"
-            >{{ material.GlobalMaterial.deliveredQty != null ? material.GlobalMaterial.deliveredQty : 0 }}
-            <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-          >
-          <span class="mat-cell maxwidth-14 text-center"
-            >{{ material.GlobalMaterial.poAvailableQty != null ? material.GlobalMaterial.poAvailableQty : 0 }}
-            <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-          >
-          <span class="mat-cell maxwidth-14 text-center"
-            >{{
-              material.GlobalMaterial.deliveredQty != null
-                ? (material.GlobalMaterial.poAvailableQty ? material.GlobalMaterial.poAvailableQty : 0) - material.GlobalMaterial.deliveredQty
-                : 0
-            }}
-            <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-          >
-        </mat-expansion-panel-header>
-
-        <ng-container *ngIf="material.IndentMaterial">
-          <div *ngFor="let indent of material.IndentMaterial">
-            <mat-expansion-panel-header class="mat-row">
-              <span class="mat-cell maxwidth-14 text-center"></span>
-              <span class="mat-cell maxwidth-14 text-center"></span>
-              <span class="mat-cell maxwidth-14 text-center"
-                >{{ indent.quantity }}
-                <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span>
-              </span>
-              <span class="mat-cell maxwidth-14 text-center">{{ indent.dueDate | date: "dd MMM yyy" }}</span>
-              <span class="mat-cell maxwidth-14 text-center"></span>
-              <span class="mat-cell maxwidth-14 text-center"></span>
-              <span class="mat-cell maxwidth-14 text-center"></span>
+          <mat-expansion-panel class="material-projects-tbl" *ngFor="let material of project.projectMaterialList"
+            #mep="matExpansionPanel">
+            <!-- Material lists existed in specific project -->
+            <mat-expansion-panel-header class="project-row-bg" (click)="getIndentsList(material, mep.expanded)">
+              <tr class="mat-row width-100">
+                <td class="mat-cell" matTooltip="{{ project.projectName }}">{{ material.materialName }}</td>
+                <td class="mat-cell">{{ material.materialUnit }}</td>
+                <td class="mat-cell text-center">{{ material.estimatedQty }}</td>
+                <td class="mat-cell text-center">{{ material.indentQnt }}</td>
+                <td class="mat-cell text-center">{{ material.dueDate | date: "dd MMM yyy" }}</td>
+                <td class="mat-cell text-center">{{ material.deliveredQty + material.directDeliveredQty }}</td>
+                <td class="mat-cell text-center">{{ material.issuedQty }}</td>
+                <td class="mat-cell text-center">{{ material.deliveredQty - material.issuedQty }}</td>
+              </tr>
             </mat-expansion-panel-header>
-          </div>
-        </ng-container>
-      </mat-expansion-panel>
-    </mat-expansion-panel>
+
+            <!-- Material Indents list -->
+            <ng-container *ngIf="indentList?.length > 0 && material.isIndent">
+              <div class="material-indent-tbl">
+                <tr class="mat-row" *ngFor="let indent of indentList">
+                  <td class="mat-cell"></td>
+                  <td class="mat-cell"></td>
+                  <td class="mat-cell text-center"></td>
+                  <td class="mat-cell text-center">{{ indent.intendedQnt }}</td>
+                  <td class="mat-cell text-center">{{ indent.dueDate | date: "dd MMM yyy" }}</td>
+                  <td class="mat-cell text-center">{{ indent.issuedQnt }}</td>
+                  <td class="mat-cell text-center"></td>
+                </tr>
+              </div>
+            </ng-container>
+          </mat-expansion-panel>
+          
+        </mat-expansion-panel>
+      </div>
+    </table>
   </div>
 </mat-accordion>
