--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3 col-sm-3 col-xs-6 border-input">
       <mat-form-field class="example-form-field border-input">
-        <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" />
+        <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" (input)="searchInput($event.target.value)" />
         <button mat-button matSuffix mat-icon-button>
           <mat-icon>search</mat-icon>
         </button>
@@ -10,79 +10,87 @@
     </div>
   </div>
 
-  <mat-accordion>
-    <div class="material-wise-section">
-      <table class="material-wise-tbl width-100">
-        <tr matSort class="mat-header-row">
-          <th class="mat-header-cell">Material Name</th>
-          <th class="mat-header-cell">Unit</th>
-          <th class="mat-header-cell text-center">Estimated <br />Quantity</th>
-          <th class="mat-header-cell text-center">Indented <br />Quantity</th>
-          <th class="mat-header-cell text-center">Required <br />Date</th>
-          <th class="mat-header-cell text-center">Delivered <br />Quantity</th>
-          <th class="mat-header-cell text-center">Awarded <br />Quantity</th>
-          <th class="mat-header-cell text-center">Available <br />Stock</th>
-        </tr>
-
-        <div *ngFor="let material of materialData | SearchPipe: searchMaterial:['materialName']">
-          <mat-expansion-panel>
-            <!-- Materials list -->
-            <mat-expansion-panel-header class="material-row-bg">
-              <tr class="mat-row materials-tbl width-100">
-                <td class="mat-cell" matTooltip="{{ material.materialName }}">{{ material.materialName }}</td>
-                <td class="mat-cell">{{ material.materialUnit }}</td>
-                <td class="mat-cell text-center">{{ material.estimatedQty }}</td>
-                <td class="mat-cell text-center">{{ material.indentQnt }}</td>
-                <td class="mat-cell text-center">{{ material.dueDate | date: "dd MMM yyy" }}</td>
-                <td class="mat-cell text-center">{{ material.deliveredQty + material.directDeliveredQty }}</td>
-                <td class="mat-cell text-center">{{ material.issuedQty }}</td>
-                <td class="mat-cell text-center">{{ (material.deliveredQty + material.directDeliveredQty) - material.issuedQty }}</td>
-              </tr>
-            </mat-expansion-panel-header>
-
-            <mat-expansion-panel class="material-projects-tbl" *ngFor="let project of material.projectMaterialList"
-              #mep="matExpansionPanel">
-              <!-- Projects list -->
-              <mat-expansion-panel-header class="project-row-bg" (click)="getIndentsList(project, mep.expanded)">
-                <tr class="mat-row width-100">
-                  <td class="mat-cell" matTooltip="{{ project.projectName }}">{{ project.projectName }}</td>
-                  <td class="mat-cell">{{ project.materialUnit }}</td>
-                  <td class="mat-cell text-center">{{ project.estimatedQty }}</td>
-                  <td class="mat-cell text-center">{{ project.indentQnt }}</td>
-                  <td class="mat-cell text-center">{{ project.dueDate | date: "dd MMM yyy" }}</td>
-                  <td class="mat-cell text-center">{{ project.deliveredQty + project.directDeliveredQty }}</td>
-                  <td class="mat-cell text-center">{{ project.issuedQty }}</td>
-                  <td class="mat-cell text-center">{{ (project.deliveredQty + project.directDeliveredQty) - project.issuedQty }}</td>
+  <ng-container *ngIf="isPaginationShow; else noData">
+    <mat-accordion>
+      <div class="material-wise-section">
+        <table class="material-wise-tbl width-100">
+          <tr matSort class="mat-header-row">
+            <th class="mat-header-cell">Material Name</th>
+            <th class="mat-header-cell">Unit</th>
+            <th class="mat-header-cell text-center">Estimated <br />Quantity</th>
+            <th class="mat-header-cell text-center">Indented <br />Quantity</th>
+            <th class="mat-header-cell text-center">Required <br />Date</th>
+            <th class="mat-header-cell text-center">Delivered <br />Quantity</th>
+            <th class="mat-header-cell text-center">Awarded <br />Quantity</th>
+            <th class="mat-header-cell text-center">Available <br />Stock</th>
+          </tr>
+  
+          <div *ngFor="let material of materialData | SearchPipe: searchMaterial:['materialName']">
+            <mat-expansion-panel>
+              <!-- Materials list -->
+              <mat-expansion-panel-header class="material-row-bg">
+                <tr class="mat-row materials-tbl width-100">
+                  <td class="mat-cell" matTooltip="{{ material.materialName }}">{{ material.materialName }}</td>
+                  <td class="mat-cell">{{ material.materialUnit }}</td>
+                  <td class="mat-cell text-center">{{ material.estimatedQty }}</td>
+                  <td class="mat-cell text-center">{{ material.indentQnt }}</td>
+                  <td class="mat-cell text-center">{{ material.dueDate | date: "dd MMM yyy" }}</td>
+                  <td class="mat-cell text-center">{{ material.deliveredQty + material.directDeliveredQty }}</td>
+                  <td class="mat-cell text-center">{{ material.issuedQty }}</td>
+                  <td class="mat-cell text-center">{{ (material.deliveredQty + material.directDeliveredQty) - material.issuedQty }}</td>
                 </tr>
               </mat-expansion-panel-header>
-
-              <!-- Material Indents list -->
-              <ng-container *ngIf="indentList?.length > 0 && project.isIndent">
-                <div class="material-indent-tbl">
-                  <tr class="mat-row" *ngFor="let indent of indentList">
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell text-center">{{ indent.intendedQnt }}</td>
-                    <td class="mat-cell text-center">{{ indent.dueDate | date: "dd MMM yyy" }}</td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell text-center">{{ indent.issuedQnt }}</td>
-                    <td class="mat-cell"></td>
+  
+              <mat-expansion-panel class="material-projects-tbl" *ngFor="let project of material.projectMaterialList"
+                #mep="matExpansionPanel">
+                <!-- Projects list -->
+                <mat-expansion-panel-header class="project-row-bg" (click)="getIndentsList(project, mep.expanded)">
+                  <tr class="mat-row width-100">
+                    <td class="mat-cell" matTooltip="{{ project.projectName }}">{{ project.projectName }}</td>
+                    <td class="mat-cell">{{ project.materialUnit }}</td>
+                    <td class="mat-cell text-center">{{ project.estimatedQty }}</td>
+                    <td class="mat-cell text-center">{{ project.indentQnt }}</td>
+                    <td class="mat-cell text-center">{{ project.dueDate | date: "dd MMM yyy" }}</td>
+                    <td class="mat-cell text-center">{{ project.deliveredQty + project.directDeliveredQty }}</td>
+                    <td class="mat-cell text-center">{{ project.issuedQty }}</td>
+                    <td class="mat-cell text-center">{{ (project.deliveredQty + project.directDeliveredQty) - project.issuedQty }}</td>
                   </tr>
-                </div>
-              </ng-container>
-
-
+                </mat-expansion-panel-header>
+  
+                <!-- Material Indents list -->
+                <ng-container *ngIf="indentList?.length > 0 && project.isIndent">
+                  <div class="material-indent-tbl">
+                    <tr class="mat-row" *ngFor="let indent of indentList">
+                      <td class="mat-cell"></td>
+                      <td class="mat-cell"></td>
+                      <td class="mat-cell"></td>
+                      <td class="mat-cell text-center">{{ indent.intendedQnt }}</td>
+                      <td class="mat-cell text-center">{{ indent.dueDate | date: "dd MMM yyy" }}</td>
+                      <td class="mat-cell"></td>
+                      <td class="mat-cell text-center">{{ indent.issuedQnt }}</td>
+                      <td class="mat-cell"></td>
+                    </tr>
+                  </div>
+                </ng-container>
+  
+  
+              </mat-expansion-panel>
+  
             </mat-expansion-panel>
+          </div>
+        </table>
+      </div>
+    </mat-accordion>
+  </ng-container>
+  
+  <ng-template #noData>
+    <p class="text-align-center m-t-50">No material exists for current search</p>
+  </ng-template>
+  
 
-          </mat-expansion-panel>
-        </div>
-      </table>
-    </div>
-  </mat-accordion>
-
-  <ng-container *ngIf="paginationConfig">
+  <ng-container *ngIf="paginationConfig && isPaginationShow">
     <app-paginator class="pagi-st" [config]="paginationConfig" (updatePaginator)="updatePaginatorOptions($event)">
     </app-paginator>
   </ng-container>
+  
 </ng-container>
